<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.code.aon</groupId>
		<artifactId>aon.parent</artifactId>
		<version>9.23-SNAPSHOT</version>
	</parent>
	<groupId>com.esferalia.aon</groupId>
	<artifactId>aon.in.payroll</artifactId>
	<packaging>jar</packaging>

	<name>AON-IN-PAYROLL</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
	    <plugins>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <configuration>
			    <excludes>
			      <exclude>com/esferalia/aon/in/payroll/aws/**</exclude>
			    </excludes>
			    <testExcludes>
			      <testExclude>com/esferalia/aon/in/payroll/aws/**</testExclude>
			    </testExcludes>
			    <source>17</source>
			    <target>17</target>
                            </configuration>
			</plugin>
	    </plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>solutions.aon</groupId>
			<artifactId>aon.seg.social</artifactId>
			<version>${project.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.esferalia.aon</groupId>
			<artifactId>aon.payroll</artifactId>
			<version>${project.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
		  <groupId>org.apache.pdfbox</groupId>
		  <artifactId>pdfbox</artifactId>
		  <version>3.0.4</version>
		</dependency>
		<dependency>
	        <groupId>org.apache.pdfbox</groupId>
	        <artifactId>pdfbox-io</artifactId>
		  	<version>3.0.4</version>
    	</dependency>
    
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.33</version>
			<scope>compile</scope>
		</dependency>
		
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.13.2</version>
		<scope>test</scope>
	</dependency>

	<dependency>
		<groupId>com.esferalia.aon</groupId>
		<artifactId>aon.occam</artifactId>
		<type>test-jar</type>
		<version>${project.version}</version>
		<scope>test</scope>
	 </dependency>		
	 
	<dependency>
    	<groupId>net.sourceforge.barbecue</groupId>
    	<artifactId>barbecue</artifactId>
    	<version>1.5-beta1</version>
	</dependency>
	 
	<dependency>
		<groupId>solutions.aon</groupId>
		<artifactId>aon.seg.social</artifactId>
		<type>test-jar</type>
		<version>${project.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>com.esferalia.aon</groupId>
		<artifactId>aon.occam</artifactId>
		<type>test-jar</type>
		<version>${project.version}</version>
		<scope>test</scope>
	 </dependency>		
	<dependency>
		<groupId>com.esferalia.aon</groupId>
		<artifactId>aon.payroll</artifactId>
		<type>test-jar</type>
		<version>${project.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>com.fasterxml.jackson.dataformat</groupId>
	    <artifactId>jackson-dataformat-csv</artifactId>
	    <version>2.18.3</version>
	</dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.3</version>
        </dependency>
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>5.4.0</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>5.4.0</version>
	</dependency>

	<dependency>
   		<groupId>com.google.zxing</groupId>
    	<artifactId>core</artifactId>
    	<version>3.5.3</version>
	</dependency>

	<dependency>
		<groupId>solutions.aon</groupId>
		<artifactId>aon.seg.social</artifactId>
		<type>test-jar</type>
		<version>${project.version}</version>
		<scope>test</scope>
	</dependency>
	
     <dependency>
		<groupId>com.github.javafaker</groupId>
		<artifactId>javafaker</artifactId>
		<version>1.0.2</version>
		<scope>test</scope>
     </dependency>
 
		<dependency>
   			<groupId>software.amazon.awssdk</groupId>
    		<artifactId>textract</artifactId>
    		<version>2.31.6</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

  <profiles>
    <profile>
    <id>aws-pdf2aon</id>
    <activation>
      <property>
        <name>aws.lambda</name>
        <value>true</value>
      </property>
    </activation>
    <build>
      <plugins>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-assembly-plugin</artifactId>
			    <executions>
			        <execution>
			            <phase>package</phase>
			            <goals>
			                <goal>single</goal>
			            </goals>
			            <configuration>
			                <archive>
			                <manifest>
			                    <mainClass>
			                        com.esferalia.aon.in.payroll.PDF2Aon
			                    </mainClass>
			                </manifest>
			                </archive>
			                <descriptorRefs>
			                    <descriptorRef>jar-with-dependencies</descriptorRef>
			                </descriptorRefs>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <configuration combine.self="override" >
			    <excludes/>
			    <testExcludes>
			      <testExclude>com/esferalia/aon/in/payroll/aws/**</testExclude>
			    </testExcludes>
			    <source>17</source>
			    <target>17</target>
				<encoding>ISO-8859-1</encoding>
              </configuration>
			</plugin>
      </plugins>
    </build>
	  <dependencies>
	    <dependency>
	     <groupId>com.amazonaws</groupId>
	      <artifactId>aws-lambda-java-core</artifactId>
	      <version>1.2.3</version>
	    </dependency>
	    <dependency>
	      <groupId>com.amazonaws</groupId>
	      <artifactId>aws-lambda-java-events</artifactId>
	      <version>3.14.0</version>
	    </dependency>
	    <dependency>
	      <groupId>com.amazonaws</groupId>
	      <artifactId>aws-lambda-java-log4j2</artifactId>
	      <version>1.6.0</version>
	    </dependency>
		<dependency>
    		<groupId>software.amazon.awssdk</groupId>
		    <artifactId>s3</artifactId>
		    <version>2.28.23</version>
    		<scope>compile</scope>
   	 	</dependency>
		<dependency>
		  <groupId>jakarta.mail</groupId>
		  <artifactId>mail</artifactId>
		  <version>1.4</version>
		</dependency>
		<dependency>
   			<groupId>software.amazon.awssdk</groupId>
    		<artifactId>textract</artifactId>
    		<version>2.31.6</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.esferalia.aon</groupId>
			<artifactId>aon.payroll</artifactId>
			<version>${project.version}</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.htmlunit</groupId>
					<artifactId>htmlunit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-tools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.code.aon</groupId>
					<artifactId>aon.google.apis</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.esferalia.aon</groupId>
					<artifactId>aon.sepe.api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
        <dependency>
            <groupId>solutions.aon</groupId>
            <artifactId>aon.aws</artifactId>
            <version>${project.version}</version>
            <exclusions>
				<exclusion>
					<groupId>com.sun.mail</groupId>
					<artifactId>jakarta.mail</artifactId>
				</exclusion>
				<exclusion>
				    <groupId>com.fasterxml.jackson.core</groupId>
		    		<artifactId>jackson-databind</artifactId>
				</exclusion>
				<exclusion>
		    		<groupId>software.amazon.awssdk</groupId>
		    		<artifactId>dynamodb</artifactId>
				</exclusion>
				<exclusion>
		    		<groupId>software.amazon.awssdk</groupId>
		    		<artifactId>ses</artifactId>
				</exclusion>
			</exclusions>
        </dependency>
		<dependency>
			<groupId>net.aonsolutions</groupId>
			<artifactId>aon.api.sdk</artifactId>
			<version>${project.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- Exclude from jar -->
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>5.4.0</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>5.4.0</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
	   		<groupId>com.google.zxing</groupId>
	    	<artifactId>core</artifactId>
	    	<version>3.5.3</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.dataformat</groupId>
		    <artifactId>jackson-dataformat-csv</artifactId>
		    <version>2.18.3</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>4.4.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>solutions.aon</groupId>
			<artifactId>aon.seg.social</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.htmlunit</groupId>
					<artifactId>htmlunit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
				

	  </dependencies>
    </profile>
  </profiles>


</project>
